--- a/pom.xml
+++ b/pom.xml
@@ -53,5 +53,12 @@
             <version>1.10.19</version>
             <scope>test</scope>
         </dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-test -->
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-test</artifactId>
+		    <version>5.3.24</version>
+		    <scope>test</scope>
+		</dependency>
     </dependencies>
 </project>
